--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
 <body>
         <nav>
            <h1>
-                    <li style="float:left"><a class="active" href="#about">Peter Shumie</a></li> 
-                    <li style="float:right"><a href="#contact">Contact</a></li>
-                    <li style="float:right"><a href="#portfolio">Portfolio</a></li>
-                    <li style="float:right"><a href="#about">About</a></li> 
+                    <li="float:left">Peter Shumie</li> 
+                    <li="float:right style="float:right">Contact</li>
+                    <li style="float:right">Portfolio</li>
+                    <li style="float:right">About</li> 
                     
           </h1>
+
+        <h2>About Me</h2>
         </nav> 
     
 
