--- a/contact.html
+++ b/contact.html
@@ -1,16 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Contact Me</title>
+    <title>Contact | Peter Shumie</title>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
-    <h1>Peter Shumie</h1>
-    <h2>About</h2>
-    <h3>Portfolio</h3>
-    <h4>Contact</h4>
-    
+
+    <header id="masthead">
+        <div class="container">
+            <a href="index.html" id="logo">Peter Shumie</a>
+            <nav>
+                <a href="index.html">About</a>
+                <a href="portfolio.html">Portfolio</a>
+                <a href="contact.html">Contact</a>
+            </nav>
+        </div>
+    </header>
+
+
+    <div id="main-container" class="container" section class="main-section"></div>
+        <h1>Contact</h1>
+
+        <form id="contact-form">
+            <ul>
+                <li>
+                    <label for="name">Name</label>
+                    <input type="text" id="name" name="name" placeholder="Peter Shumie" required="required">
+                </li>
+                <li>
+                    <label for="email">Email</label>
+                    <input type="email" id="email" name="email" placeholder="shumie.peter@gmail.com"
+                        required="required">
+                </li>
+                <li>
+                    <label for="message">Message</label>
+                    <textarea id="message" required="required"></textarea>
+                </li>
+            </ul>
+            <input type="submit">
+        </form>
+
+        </section>
+
+    </div>
+
+    <footer>
+        <div class="container">
+            Copyright &copy;
+        </div>
+    </footer>
 </body>
+
 </html>
